minor formatting updates, remove NOT_vERIFIED.txt

--- a/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "---\n",
     "syncID: c67de95147e9414a88ea876f3fc5252b\n",
-    "title: \"Mask Lidar Rasters in Python\"\n",
-    "description: \"Mask rasters by a thershold based on pixel values in Python.\" \n",
+    "title: \"Mask Rasters Using Thresholds in Python\"\n",
+    "description: \"Mask Lidar Aspect and Spectrometer NDVI rasters by threshold values in Python.\" \n",
     "dateCreated: 2017-06-21 \n",
     "authors: Bridget Hass\n",
     "contributors: \n",
@@ -26,9 +26,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask a Raster Using Threshold Values in Python\n",
-    "\n",
     "In this tutorial, we demonstrate how to remove parts of a raster based on pixel values using a mask we create. A mask raster layer contains pixel values of either 1 or 0 to where 1 represents pixels that will be used in the analysis and 0 are pixels that are assigned a value of nan (not a number). This can be useful in a number of scenarios, when you are interested in only a certain portion of the data, or need to remove poor-quality data, for example.\n",
+    "\n",
+    "<div id=\"ds-objectives\" markdown=\"1\">\n",
+    "\n",
+    "### Objectives\n",
+    "\n",
+    "After completing this tutorial, you will be able to:\n",
+    "\n",
+    "* User rasterio to read in NEON lidar aspect and vegetation indices geotiff files\n",
+    "* Plot a raster tile and histogram of the data values\n",
+    "* Create a mask based on values from the aspect and ndvi data\n",
+    "\n",
+    "### Install Python Packages\n",
+    "\n",
+    "* **gdal** \n",
+    "* **rasterio**\n",
+    "* **requests** \n",
+    "* **zipfile**\n",
+    "\n",
+    "### Download Data\n",
+    "\n",
+    "For this lesson, we will read in a Canopy Height Model data collected at NEON's <a href=\"https://www.neonscience.org/field-sites/teak\" target=\"_blank\">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.\n",
+    "\n",
+    "</div>\n",
     "\n",
     "<img src=\"http://neon-workwithdata.github.io/neon-data-institute-2016/images/spatialData/raster_masks.jpg\" style=\"width: 750px;\"/>"
    ]
@@ -272,6 +293,7 @@
     "ndvi_gtpt4 = ndvi_data.copy()\n",
     "ndvi_gtpt4[ndvi_data<0.4]=np.nan\n",
     "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
     "plt.imshow(ndvi_gtpt4,extent=ext)\n",
     "plt.colorbar(); plt.set_cmap('RdYlGn'); \n",
     "plt.title('TEAK NDVI > 0.4')\n",
@@ -289,6 +311,7 @@
     "ndvi_gtpt4_Nslope = ndvi_gtpt4.copy()\n",
     "ndvi_gtpt4_Nslope[aspect_reclass != 1] = np.nan\n",
     "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
     "plt.imshow(ndvi_gtpt4_Nslope,extent=ext)\n",
     "plt.colorbar(); plt.set_cmap('RdYlGn'); \n",
     "plt.title('TEAK, North Facing & NDVI > 0.4')\n",
