minor updates to headings, add a few more markdown cells with descriptions

--- a/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
@@ -55,15 +55,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Lidar Elevation Models\n",
-    "\n",
-    "To start, we will open the NEON LiDAR Digital Surface and Digital Terrain Models (DSM and DTM) which are provided in geotiff (.tif) format. For this exercise we will continue working with the TEAK data subset. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -88,7 +79,9 @@
    "metadata": {},
    "source": [
     "## Read in the datasets\n",
-    "### Download Lidar Elevation Models and Vegetation Indices from TEAK"
+    "### Download Lidar Elevation Models and Vegetation Indices from TEAK\n",
+    "\n",
+    "To start, we will download the NEON Lidar Aspect and Spectrometer Vegetation Indices (including the NDVI) which are provided in geotiff (.tif) format. Use the `download_url` function below to download the data directly from the cloud storage location."
    ]
   },
   {
@@ -152,6 +145,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the files are downloaded, we can read them in using `rasterio`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -166,17 +166,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define and view the spatial extent so we can use this for plotting later on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define and view the spatial extent so we can use this for plotting later on\n",
     "ext = [aspect_dataset.bounds.left,\n",
     "       aspect_dataset.bounds.right,\n",
     "       aspect_dataset.bounds.bottom,\n",
     "       aspect_dataset.bounds.top]\n",
     "ext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the aspect map and histogram."
    ]
   },
   {
@@ -222,6 +235,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the NDVI data to a rasterio dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -230,6 +250,13 @@
     "ndvi_file = os.path.join(\"./data\",'NEON_D17_TEAK_DP3_320000_4092000_NDVI.tif')\n",
     "ndvi_dataset = rio.open(ndvi_file)\n",
     "ndvi_data = ndvi_dataset.read(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the NDVI map and histogram."
    ]
   },
   {
@@ -250,6 +277,13 @@
     "ax2.get_legend().remove()\n",
     "\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the classified aspect map to highlight the north and south facing slopes."
    ]
   },
   {
