fix code link, minor text updates

--- a/tutorials/Python/AOP/Lidar/lidar-topography/hillshade/create-hillshade.ipynb
+++ b/tutorials/Python/AOP/Lidar/lidar-topography/hillshade/create-hillshade.ipynb
@@ -16,7 +16,7 @@
     "topics: lidar, raster, remote-sensing, elevation\n",
     "languagesTool: Python\n",
     "dataProduct: DP1.30003, DP3.30015, DP3.30024, DP3.30025\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/Lidar/lidar-topography/create_hillshade_from_terrain_raster_py/create_hillshade_from_terrain_raster_py.ipynb\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Lidar/lidar-topography/hillshade/create-hillshade.ipynb\n",
     "tutorialSeries: intro-lidar-py-series\n",
     "urlTitle: create-hillshade-py\n",
     "---"
@@ -51,7 +51,7 @@
     "\n",
     "### Additional Resources\n",
     "\n",
-    "NEON'S Airborne Observation Platform provides Algorithm Theoretical Basis Documents (ATBDs) for all of their data products. Please refer to the ATBDs below for a complete understanding of how the Lidar-derived rasters are generated.\n",
+    "NEON'S Airborne Observation Platform provides Algorithm Theoretical Basis Documents (ATBDs) for all of their data products. Please refer to the ATBDs below for a more in-depth understanding of how the Lidar-derived rasters are generated.\n",
     "\n",
     "- <a href=\"https://data.neonscience.org/api/v0/documents/NEON.DOC.002390vB?inline=true\" target=\"_blank\">Elevation (DSM and DTM) ATBD</a>\n",
     "- <a href=\"https://data.neonscience.org/api/v0/documents/NEON.DOC.002387vB?inline=true\" target=\"_blank\">Ecosystem Structure ATBD</a>\n",
@@ -239,9 +239,7 @@
    "source": [
     "### Calculate CHM & Overlay on Top of Hillshade\n",
     "\n",
-    "Canopy Height Model, in it's simplest form is the Digital Surface Model minus the Digital Terrain Model. While NEON's CHM is calculated using a slightly more sophisticated \"pit-free\" algorithm (see ATBD), in this example, we'll calculate the CHM with the simple difference formula. First, read in the DSM data set, which we previously downloaded into the data folder.\n",
-    "\n",
-    "<a href=\"https://data.neonscience.org/data-products/DP3.30024.001\" target=\"_blank\">Elevation - LiDAR</a>"
+    "Canopy Height can be simply calculated by subtracting the Digital Terrain Model from the Digital Surface Model. While NEON's CHM is calculated using a slightly more sophisticated \"pit-free\" algorithm (see the ATBD linked at the top of this tutorial), in this example, we'll calculate the CHM with the simple difference formula. First, read in the DSM data set, which we previously downloaded into the data folder."
    ]
   },
   {
@@ -310,7 +308,6 @@
     "#Canopy\n",
     "im3 = plt.imshow(chm_data,cmap='Greens',alpha=0.6,extent=ext); \n",
     "cbar2 = plt.colorbar(im3,fraction=0.045,pad=0.04,ax=ax); cbar2.set_label('Canopy Height, m',rotation=270,labelpad=15)\n",
-    "# plt.colorbar(im,fraction=0.046, pad=0.04)\n",
     "\n",
     "ax=plt.gca(); ax.ticklabel_format(useOffset=False, style='plain') #do not use scientific notation \n",
     "rotatexlabels = plt.setp(ax.get_xticklabels(),rotation=90) #rotate x tick labels 90 degrees\n",
