minor text and variable name updates
still need to fix the mask rasters image, not rendering

--- a/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "For this lesson, we will read in a Canopy Height Model data collected at NEON's <a href=\"https://www.neonscience.org/field-sites/teak\" target=\"_blank\">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.\n",
+    "For this lesson, we will read in Canopy Height Model data collected at NEON's <a href=\"https://www.neonscience.org/field-sites/teak\" target=\"_blank\">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.\n",
     "\n",
     "</div>\n",
     "\n",
@@ -342,11 +342,11 @@
    "outputs": [],
    "source": [
     "#Now include additional requirement that slope is North-facing (i.e. aspectNS_array = 1)\n",
-    "ndvi_gtpt4_Nslope = ndvi_gtpt4.copy()\n",
-    "ndvi_gtpt4_Nslope[aspect_reclass != 1] = np.nan\n",
+    "ndvi_gtpt4_north = ndvi_gtpt4.copy()\n",
+    "ndvi_gtpt4_north[aspect_reclass != 1] = np.nan\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
-    "plt.imshow(ndvi_gtpt4_Nslope,extent=ext)\n",
+    "plt.imshow(ndvi_gtpt4_north,extent=ext)\n",
     "plt.colorbar(); plt.set_cmap('RdYlGn'); \n",
     "plt.title('TEAK, North Facing & NDVI > 0.4')\n",
     "ax=plt.gca(); ax.ticklabel_format(useOffset=False, style='plain') #do not use scientific notation \n",
@@ -373,6 +373,7 @@
     "ndvi_gtpt4_south = ndvi_gtpt4.copy()\n",
     "ndvi_gtpt4_south[aspect_reclass != 2] = np.nan\n",
     "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6,6))\n",
     "plt.imshow(ndvi_gtpt4_south,extent=ext)\n",
     "plt.colorbar(); plt.set_cmap('RdYlGn'); \n",
     "plt.title('TEAK, South Facing & NDVI > 0.4')\n",
