--- a/tutorials-in-development/Python/AOP/aop_download_examples/download_aop_by_polygon.ipynb
+++ b/tutorials-in-development/Python/AOP/aop_download_examples/download_aop_by_polygon.ipynb
@@ -44,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add the python_modules to the path and import the python neon download and hyperspectral functions\n",
+    "# add the python_modules to the path and import the python neon download functions\n",
     "sys.path.insert(0, '../python_modules')\n",
-    "import neon_aop_download_functions as neon_dl"
+    "import neon_aop_download as neon_dl"
    ]
   },
   {
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "# use the neon_download_functions \"neon_dl.list_available_urls\" to show the urls of data available at SERC\n",
+    "# use the neon_aop_download \"neon_dl.list_available_urls\" to show the urls of data available at SERC\n",
     "serc_urls = neon_api.list_urls_by_product_site('DP1.30003.001','SERC')\n",
     "serc_urls"
    ]
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "# use the neon_download_functions \"neon_dl.list_available_urls\" to show the urls of data available at SERC\n",
+    "# use the neon_aop_download \"neon_dl.list_available_urls\" to show the urls of data available at SERC\n",
     "neon_api.list_urls_by_product_site(dpID,site)"
    ]
   },
