fix links to research applications + fix broken code link

--- a/tutorials/Python/AOP/RGB-camera/intro-rgb-camera/plot-neon-rgb-camera-data/plot-neon-rgb-camera-data.ipynb
+++ b/tutorials/Python/AOP/RGB-camera/intro-rgb-camera/plot-neon-rgb-camera-data/plot-neon-rgb-camera-data.ipynb
@@ -52,9 +52,15 @@
     "\n",
     "As part of the \n",
     "<a href=\"https://www.neonscience.org/data-collection/airborne-remote-sensing\" target=\"_blank\"> NEON Airborne Operation Platform's</a> \n",
-    "suite of remote sensing instruments, the digital camera producing high-resolution (<= 10 cm) photographs of the earth’s surface. The camera records light energy that has reflected off the ground in the visible portion (red, green and blue) of the electromagnetic spectrum. Often the camera images are used to provide context for the hyperspectral and LiDAR data, but they can also be used for research purposes in their own right. One such example is the tree-crown mapping work by Weinstein et al. https://www.mdpi.com/2072-4292/11/11/1309 deep forest https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.13472\n",
+    "suite of remote sensing instruments, the digital camera producing high-resolution (<= 10 cm) photographs of the earth’s surface. The camera records light energy that has reflected off the ground in the visible portion (red, green and blue) of the electromagnetic spectrum. Often the camera images are used to provide context for the hyperspectral and LiDAR data, but they can also be used for research purposes in their own right. One such example is the tree-crown mapping work by Weinstein et al. - see the links below for more information!\n",
     "\n",
-    "**Data Tip:** To run a cell you can either select `Cell > Run Cells` with your cursor in the cell you want to run, or use the shortcut key `Shift + Enter`. For more handy shortcuts, refer to the tab `Help > Keyboard Shortcuts`. "
+    "- <a href=\"https://www.mdpi.com/2072-4292/11/11/1309\" target=\"_blank\">Individual Tree-Crown Detection in RGB Imagery Using Semi-Supervised Deep Learning Neural Networks</a>\n",
+    "- <a href=\"https://elifesciences.org/articles/62922\" target=\"_blank\">A remote sensing derived data set of 100 million individual tree crowns for the National Ecological Observatory Network</a>\n",
+    "- <a href=\"https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.13472\" target=\"_blank\">DeepForest: A Python package for RGB deep learning tree crown delineation</a>\n",
+    "\n",
+    "In this lesson we will keep it simple and just show how to read in and plot a single camera RGB tile - a first step in any research incorporating the AOP camera data (in Python).\n",
+    "\n",
+    "**Tip:** To run a code chunk (cell) in Jupyter Notebook you can either select `Cell > Run Cells` with your cursor placed in the cell you want to run, or use the shortcut key `Shift + Enter`. For more handy shortcuts, refer to the tab `Help > Keyboard Shortcuts`. "
    ]
   },
   {
