--- a/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore.Rmd
+++ b/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore.Rmd
@@ -7,7 +7,7 @@ dataProducts: DP1.00024.001, DP1.20063.001, DP3.30015.001
 authors: Claire K. Lunch
 contributors: Christine Laney, Megan A. Jones, Donal O'Leary
 estimatedTime: 1 - 2 hours
-packagesLibraries: devtools, neonUtilities, raster
+packagesLibraries: neonUtilities, neonOS, terra
 topics: data-management, rep-sci
 languageTool: R, API
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore.R
@@ -23,7 +23,8 @@ opts_knit$set(global.par = TRUE)
 This tutorial covers downloading NEON data, using the Data Portal and 
 the neonUtilities R package, as well as basic instruction in beginning to 
 explore and work with the downloaded data, including guidance in 
-navigating data documentation.
+navigating data documentation. We will explore data of 3 different types, 
+and make a simple figure from each.
 
 ## NEON data
 There are 3 basic categories of NEON data:
@@ -57,25 +58,24 @@ preferably, RStudio loaded on your computer.
 
 * **neonUtilities**: Basic functions for accessing NEON data
 * **neonOS**: Functions for common data wrangling needs for NEON observational data
-* **raster**: Raster package; needed for remote sensing data
+* **terra**: Spatial data package; needed for remote sensing data
 
-Both of these packages can be installed from CRAN:
+These packages can be installed from CRAN:
 
 ```{r packages, eval=FALSE}
 
 install.packages("neonUtilities")
 install.packages("neonOS")
-install.packages("raster")
+install.packages("terra")
 
 ```
 
 
 ### Additional Resources
 
-* <a href="https://www.neonscience.org/neonDataStackR" target="_blank">Tutorial for neonUtilities.</a> Some overlap with this tutorial but goes into more detail about the neonUtilities package.
 * <a href="https://www.neonscience.org/neon-utilities-python" target="_blank">Tutorial for using neonUtilities from a Python environment.</a>
 * <a href="https://github.com/NEONScience/NEON-Utilities/neonUtilities" target="_blank">GitHub repository for neonUtilities</a>
-* <a href="https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pdf" target="_blank">neonUtilities cheat sheet</a>. A quick reference guide for users.
+* <a href="https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities_0.pdf" target="_blank">neonUtilities cheat sheet</a>. A quick reference guide for users.
 
 </div>
 
@@ -83,24 +83,29 @@ install.packages("raster")
 
 Go to the 
 <a href="http://data.neonscience.org" target="_blank">NEON Data Portal</a> 
-and download some data! Almost any IS or OS data product can be used for this 
-section of the tutorial, but we will proceed assuming you've downloaded 
-Photosynthetically Active Radiation (PAR) (DP1.00024.001) data. For optimal 
-results, download three months of data from one site. The downloaded file 
-should be a zip file named NEON_par.zip. For this tutorial, we will be using 
-PAR data from the Wind River Experimental Forest (WREF) in Washington state 
-from September-November 2019.
+and download some data! To follow the tutorial exactly, download 
+Photosynthetically active radiation (PAR) (DP1.00024.001) data from 
+September-November 2019 at Wind River Experimental Forest (WREF). The 
+downloaded file should be a zip file named NEON_par.zip.
 
-Now switch over to R and load all the packages installed above.
+If you prefer to explore a different data product, you can still follow this 
+tutorial. But it will be easier to understand the steps in the tutorial, 
+particularly the data navigation, if you choose a sensor data product for 
+this section.
+
+Once you've downloaded a zip file of data from the portal, switch over to R 
+and load all the packages installed above.
 
 ```{r setup, results='hide', message=FALSE, warning=FALSE}
 
 # load packages
 library(neonUtilities)
 library(neonOS)
-library(raster)
+library(terra)
 
-# Set global option to NOT convert all character variables to factors
+# Set global option to NOT convert all character variables to factors.
+# If you are working in R version 4 or higher (recommended), this is 
+# already the default setting.
 options(stringsAsFactors=F)
 
 ```
@@ -120,33 +125,134 @@ stackByTable("~/Downloads/NEON_par.zip")
 
 In the same directory as the zipped file, you should now have an unzipped 
 folder of the same name. When you open this you will see a new folder 
-called **stackedFiles**, which should contain five files: 
+called **stackedFiles**, which should contain at least seven files: 
 **PARPAR_30min.csv**, **PARPAR_1min.csv**, **sensor_positions.csv**, 
-**variables.csv**, and **readme.txt**.
+**variables_00024.csv**, **readme_00024.txt**, **issueLog_00024.csv**, 
+and **citation_00024_RELEASE-202X.txt**.
 
-We'll look at these files in more detail below.
+## Navigate data downloads: IS
+
+Let's start with a brief description of each file. This set of files is 
+typical of a NEON IS data product.
+
+* **PARPAR_30min.csv**: PAR data at 30-minute averaging intervals
+* **PARPAR_1min.csv**: PAR data at 1-minute averaging intervals
+* **sensor_positions.csv**: The physical location of each sensor collecting PAR measurements. There is a PAR sensor at each level of the WREF tower, and this table lets you connect the tower level index to the height of the sensor in meters.
+* **variables_00024.csv**: Definitions and units for each data field in the PARPAR_#min tables.
+* **readme_00024.txt**: Basic information about the PAR data product.
+* **issueLog_00024.csv**: A record of known issues associated with PAR data.
+* **citation_00024_RELEASE-202X.txt**: The citation to use when you publish a paper using these data, in BibTeX format.
+
+We'll explore the 30-minute data. To read the file into R, use the function 
+`readTableNEON()`, which uses the variables file to assign data types to each 
+column of data:
+
+```{r read-par, results="hide", message=FALSE, warning=FALSE}
+
+par30 <- readTableNEON(
+  dataFile="~/Downloads/NEON_par/stackedFiles/PARPAR_30min.csv", 
+  varFile="~/Downloads/NEON_par/stackedFiles/variables_00024.csv")
+View(par30)
+
+```
+
+The first four columns are added by `stackByTable()` when it merges 
+files across sites, months, and tower heights. The column 
+`publicationDate` is the date-time stamp indicating when the data 
+were published, and the `release` column indicates which NEON data release 
+the data belong to. For more information about NEON data releases, see the 
+<a href="https://www.neonscience.org/data-samples/data-management/data-revisions-releases" target="_blank">Data Product Revisions and Releases</a> page.
+
+Information about each data column can be found in the variables file:
+
+```{r read-par-var, results="hide", message=FALSE, warning=FALSE}
+
+parvar <- read.csv("~/Downloads/NEON_par/stackedFiles/variables_00024.csv")
+View(parvar)
+
+```
+
+Here you can see definitions and units for each column of data.
+
+Now that we know what we're looking at, let's plot PAR from the top 
+tower level. We'll use the mean PAR from each averaging interval, and we 
+can see from the sensor positions file that the vertical index 080 
+corresponds to the highest tower level. To explore the sensor positions 
+data in more depth, see the <a href="https://www.neonscience.org/resources/learning-hub/tutorials/neon-spatial-data-basics" target="_blank">spatial data</a> tutorial.
+
+```{r plot-par, eval=TRUE}
+
+plot(PARMean~startDateTime, 
+     data=par30[which(par30$verticalPosition=="080"),],
+     type="l")
+
+```
+
+Looks good! The sun comes up and goes down every day, and some days 
+are cloudy.
+
+To see another layer of data, add PAR from a lower tower level to the 
+plot.
+
+```{r plot-par-lower, eval=TRUE}
+
+lines(PARMean~startDateTime, 
+     data=par30[which(par30$verticalPosition=="020"),],
+     col="blue")
+
+```
+
+We can see there is a lot of light attenuation through the canopy.
 
 ## Download files and load directly to R: loadByProduct()
 
-In the section above, we downloaded a .zip file from the data portal to
-our downloads folder, then used the stackByTable() function to transform
-those data into a usable format. However, there is a faster way to load
-data directly into the R Global Environment using `loadByProduct()`.
+At the start of this tutorial, we downloaded data from the NEON data portal. 
+NEON also provides an API, and the `neonUtilities` packages provides methods 
+for downloading programmatically in R.
 
-The most popular function in `neonUtilities` is `loadByProduct()`. 
+The steps we carried out above - downloading from the portal, stacking the 
+downloaded files, and reading in to R - can all be carried out in one step by 
+the neonUtilities function `loadByProduct()`.
+
+To get the same PAR data we worked with above, we would run this line of code 
+using `loadByProduct()`:
+
+```{r run-loadByProduct-par, results="hide"}
+
+parlist <- loadByProduct(dpID="DP1.00024.001", 
+                         site="WREF", 
+                         startdate="2019-09",
+                         enddate="2019-11")
+
+```
+
+The object returned by `loadByProduct()` is a named list. The objects in the 
+list are the same set of tables we ended with after stacking the data from 
+the portal above. You can see this by checking the names of the tables in 
+`parlist`:
+
+```{r par-list-names}
+
+names(parlist)
+
+```
+
+Now let's walk through the details of the inputs and options in 
+`loadByProduct()`.
+
 This function downloads data from the NEON API, merges the site-by-month 
 files, and loads the resulting data tables into the R environment, 
 assigning each data type to the appropriate R class. This is a popular 
-choice because it ensures you're always working with the latest data, 
-and it ends with ready-to-use tables in R. However, if you use it in
-a workflow you run repeatedly, keep in mind it will re-download the 
-data every time.
+choice for NEON data users because it ensures you're always working with 
+the latest data, and it ends with ready-to-use tables in R. However, if 
+you use it in a workflow you run repeatedly, keep in mind it will re-download 
+the data every time. See below for suggestions on saving the data locally.
 
 `loadByProduct()` works on most observational (OS) and sensor (IS) data, 
 but not on surface-atmosphere exchange (SAE) data, remote sensing (AOP) 
 data, and some of the data tables in the microbial data products. For 
-functions that download AOP data, see the `byFileAOP()` and `byTileAOP()` 
-sections in this tutorial. For functions that work with SAE data, see 
+functions that download AOP data, see the final 
+section in this tutorial. For functions that work with SAE data, see 
 the <a href="https://www.neonscience.org/eddy-data-intro" target="_blank">NEON eddy flux data tutorial</a>.
 
 The inputs to `loadByProduct()` control which data to download and how 
@@ -170,8 +276,10 @@ downloaded.
 * `timeIndex`: defaults to "all", to download all data; or the 
 number of minutes in the averaging interval. Only applicable to IS 
 data.
-* `savepath`: the file path you want to download to; defaults to the 
-working directory.
+* `include.provisional`: T or F: should Provisional data be included in 
+the download? Defaults to F to return only Released data, which are 
+citable by a DOI and do not change over time. Provisional data are 
+subject to change.
 * `check.size`: T or F: should the function pause before downloading 
 data and warn you about the size of your download? Defaults to T; if 
 you are using this function within a script or batch process you 
@@ -187,8 +295,10 @@ download. The DPID can be found on the
 Explore Data Products page</a>.
 It will be in the form DP#.#####.###
 
-Here, we'll download aquatic plant chemistry data from 
-three lake sites: Prairie Lake (PRLA), Suggs Lake (SUGG), 
+## Download and work with OS data
+
+To explore observational data, we'll download aquatic plant chemistry data 
+(DP1.20063.001) from three lake sites: Prairie Lake (PRLA), Suggs Lake (SUGG), 
 and Toolik Lake (TOOK).
 
 ```{r run-loadByProduct, results="hide", eval=FALSE, comment=NA}
@@ -206,16 +316,31 @@ apchem <- loadByProduct(dpID="DP1.20063.001",
 
 ```
 
-The object returned by `loadByProduct()` is a named list of data 
-frames. To work with each of them, select them from the list 
-using the `$` operator.
+As we saw above, the object returned by `loadByProduct()` is a named list of 
+data frames. Let's check out what's the same and what's different from the IS 
+data tables.
 
 ```{r loadBy-list, eval=F}
 
 names(apchem)
-View(apchem$apl_plantExternalLabDataPerSample)
 
 ```
+
+As with the sensor data, we have some data tables and some metadata tables. 
+Most of the metadata files are the same as the sensor data: **readme**, 
+**variables**, **issueLog**, and **citation**. These files contain the same 
+type of metadata here that they did in the IS data product. Let's look at the 
+other files:
+
+* **apl_clipHarvest**: Data from the clip harvest collection of aquatic plants
+* **apl_biomass**: Biomass data from the collected plants
+* **apl_plantExternalLabDataPerSample**: Chemistry data from the collected plants
+* **apl_plantExternalLabQA**: Quality assurance data from the chemistry analyses
+* **asi_externalLabPOMSummaryData**: Quality metrics from the chemistry lab
+* **validation_20063**: For observational data, a major method for ensuring data quality is to control data entry. This file contains information about the data ingest rules applied to each input data field.
+* **categoricalCodes_20063**: Definitions of each value for categorical data, such as growth form and sample condition
+
+# STOPPED HERE
 
 If you prefer to extract each table from the list and work 
 with it as an independent object, you can use the 
@@ -228,9 +353,8 @@ list2env(apchem, .GlobalEnv)
 ```
 
 If you want to be able to close R and come back to these data without 
-re-downloading, you'll want to save the tables locally. We recommend 
-also saving the variables file, both so you'll have it to refer to, and 
-so you can use it with `readTableNEON()` (see below).
+re-downloading, you'll want to save the tables locally. The most convenient 
+option is to save the 
 
 ```{r save-files, eval=F}
 
@@ -302,60 +426,6 @@ named `DP3.30015.001` with several nested subfolders, leading to a tif
 file of a canopy height model tile. We'll look at this in more detail 
 below.
 
-## Navigate data downloads: IS
-
-Let's take a look at the PAR data we downloaded earlier. We'll 
-read in the 30-minute file using the function `readTableNEON()`, 
-which uses the `variables.csv` file to assign data types to each 
-column of data:
-
-```{r read-par, results="hide", message=FALSE, warning=FALSE}
-
-par30 <- readTableNEON(
-  dataFile="~/Downloads/NEON_par/stackedFiles/PARPAR_30min.csv", 
-  varFile="~/Downloads/NEON_par/stackedFiles/variables_00024.csv")
-View(par30)
-
-```
-
-The first four columns are added by `stackByTable()` when it merges 
-files across sites, months, and tower heights. The column 
-`publicationDate` is the date-time stamp indicating when the data 
-were published. This can be used as an indicator for whether data 
-have been updated since the last time you downloaded them.
-
-The remaining columns are described by the variables file:
-
-```{r read-par-var, results="hide", message=FALSE, warning=FALSE}
-
-parvar <- read.csv("~/Downloads/NEON_par/stackedFiles/variables_00024.csv")
-View(parvar)
-
-```
-
-The variables file shows you the definition and units for each column 
-of data.
-
-The Quick Start Guide is a pdf file, and it contains basic information 
-to get you started using this data product, such as the data quality 
-information provided and common calculations many user will want to 
-make.
-
-Now that we know what we're looking at, let's plot PAR from the top 
-tower level:
-
-```{r plot-par, eval=TRUE}
-
-plot(PARMean~startDateTime, 
-     data=par30[which(par30$verticalPosition=="080"),],
-     type="l")
-
-```
-
-Looks good! The sun comes up and goes down every day, and some days 
-are cloudy. If you want to dig in a little deeper, try plotting PAR 
-from lower tower levels on the same axes to see light attenuation 
-through the canopy.
 
 ## Navigate data downloads: OS
 
