--- a/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/NEON-Boulder-Flood-LiDAR-in-R.Rmd
+++ b/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/NEON-Boulder-Flood-LiDAR-in-R.Rmd
@@ -1,26 +1,24 @@
 ---
-title: 'Data Activity: Visualize Elevation Change using LiDAR in R to Better Understand
-  the 2013 Colorado Floods'
+title: 'Visualize Elevation Changes Caused by the 2013 Colorado Floods using NEON LiDAR Data in R'
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/NEON-Boulder-Flood-LiDAR-in-R.R
-contributors: Donal O'Leary, Felipe Sanchez
+contributors: Donal O'Leary, Felipe Sanchez, Bridget Hass
 dataProduct: 
 dateCreated: '2015-05-18'
-description: This tutorial teaches how to use Digital Terrain Models derived from
-  LiDAR data to create Digital Elevation Models of Differences that allow us to measure
-  the change in elevation of an area after a disturbance event.
+description: This tutorial uses Digital Terrain Models derived from
+  LiDAR data to create Digital Elevation Model difference rasters that quantify
+  the changes in elevation of an area after a flood disturbance event.
 estimatedTime: 1 hour
 languagesTool: R
-packagesLibraries: rgdal, raster
+packagesLibraries: terra
 syncID: f578b1b20ef9483183a8c0abbf417440
 authors: Leah A. Wasser, Megan A. Jones
 topics: time-series, meteorology, data-viz
 tutorialSeries: null
-urlTitle: da-viz-neon-lidar-co13flood-R
+urlTitle: data-viz-lidar-co13flood-R
 ---
 
 
-
-This tutorial focuses on how to visualize digital elevation models derived from
+This tutorial explains how to visualize digital elevation models derived from
 LiDAR data in R. The tutorial is part of the Data Activities that can be used 
 with the 
 <a href="https://www.neonscience.org/overview-disturbance-events-co13flood/" target="_blank"> *Quantifying The Drivers and Impacts of Natural Disturbance Events Teaching Module*</a>. 
@@ -32,7 +30,7 @@ After completing this tutorial, you will be able to:
 
 * Plot raster objects in R (this activity is not designed to be an introduction 
 to raster objects in R)
-* Create a Digital Elevation Model of Difference (DoD).
+* Create a Digital Elevation Model Difference Pre- and Post- Flood.
 * Specify color palettes and breaks when plotting rasters in R. 
 
 ### Things You'll Need To Complete This Lesson
@@ -42,9 +40,7 @@ RStudio to write your code.
 
 ### R Libraries to Install:
 
-* **raster:** `install.packages("raster")`
-* **rgdal:** `install.packages("rgdal")`
-
+* **terra:** `install.packages("terra")`
 
 ### Data to Download
 The data for this data activity can be downloaded directly from the 
@@ -87,8 +83,8 @@ brief lesson on
 explores three important landscape models that are commonly used. 
 
 <figure>
-	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/lidar-derived-products/lidarTree-height.png">
-  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/lidar-derived-products/lidarTree-height.png"
+	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/lidar-derived-products/lidarTree-height.png">
+  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/lidar-derived-products/lidarTree-height.png"
 alt = "Image of the three most common LiDAR-derived products: Digital Surface Models (DSM), Digital Terain Models (DTM), and Canopy Height Models (CHM). The Digital Terrain Model allows scientist to study changes in terrair (topography) over time.">
   </a>
   <figcaption>Digital Terrain Models, Digital Surface Models and Canopy Height
@@ -121,24 +117,23 @@ event, we can get measurements of where the landscape changed.
 First, we need to load the necessary R packages to work with raster files and 
 set our working directory to the location of our data. 
 
-```{r load-libraries }
+```{r load-libraries, include=FALSE}
 # load libraries
-library(raster)   # work with raster files
-library(rgdal)    # work with raster files
+library(terra)   # work with raster files
 
 ## Set your working directory to ensure R can find the file we wish to import and where we want to save our files. Be sure to move the downloaded files into your working directory!
-wd <- "~/Git/data/" # This will depend on your local environment
+wd <- "~/data/" # This will depend on your local environment
 setwd(wd)
 ```
 
-Then we can read in two DTMs. The first DTM `preDTM3.tif` is a model from data
-collected 26-27 June 2013 and the `postDTM3.tif` is a model from data collected
+Then we can read in two DTMs. The first DTM `preDTM3.tif` is a terrain model created from data
+collected 26-27 June 2013 and the `postDTM3.tif` is a terrain model made from data collected
 on 8 October 2013.  
 
 ```{r open-DTMs }
 # Load DTMs into R
-DTM_pre <- raster(paste0(wd,"disturb-events-co13/lidar/pre-flood/preDTM3.tif"))
-DTM_post <- raster(paste0(wd,"disturb-events-co13/lidar/post-flood/postDTM3.tif"))
+DTM_pre <- rast(paste0(wd,"disturb-events-co13/lidar/pre-flood/preDTM3.tif"))
+DTM_post <- rast(paste0(wd,"disturb-events-co13/lidar/post-flood/postDTM3.tif"))
 
 # View raster structure
 DTM_pre
@@ -159,13 +154,13 @@ The default azimuth for many hillshades is 315 degrees -- to the NW.
 # In order to generate the hillshde, we need both the slope and the aspect of
 # the extent we are working on. 
 
-DTM_pre_slope <- terrain(DTM_pre, opt="slope",units = "radians")
-DTM_pre_aspect <- terrain(DTM_pre, opt ="aspect", units = "radians")
-DTM_pre_hillshade <- hillShade(DTM_pre_slope, DTM_pre_aspect)
+DTM_pre_slope <- terrain(DTM_pre, v="slope", unit="radians")
+DTM_pre_aspect <- terrain(DTM_pre, v="aspect", unit="radians")
+DTM_pre_hillshade <- shade(DTM_pre_slope, DTM_pre_aspect)
 
-DTM_post_slope <- terrain(DTM_post, opt="slope",units = "radians")
-DTM_post_aspect <- terrain(DTM_post, opt ="aspect", units = "radians")
-DTM_post_hillshade <- hillShade(DTM_post_slope, DTM_post_aspect)
+DTM_post_slope <- terrain(DTM_post, v="slope", unit="radians")
+DTM_post_aspect <- terrain(DTM_post, v="aspect", unit="radians")
+DTM_post_hillshade <- shade(DTM_post_slope, DTM_post_aspect)
 
 ```
 
@@ -180,7 +175,7 @@ through the second (DTM) plot, we also set a value between 0 (transparent) and 1
 plot(DTM_pre_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors for hillshade
         legend=FALSE,         # no legend, we don't care about the grey of the hillshade
-        main="Four Mile Canyon Creek, Boulder County\nPre-Flood",
+        main="Pre-Flood Four Mile Canyon, Boulder County",
         axes=FALSE)           # makes for a cleaner plot, if the coordinates aren't necessary
 
 plot(DTM_pre, 
@@ -193,7 +188,7 @@ plot(DTM_pre,
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  
         legend=FALSE,
-        main="Four Mile Canyon Creek, Boulder County\nPost-Flood",
+        main="Post-Flood Four Mile Canyon, Boulder County",
         axes=FALSE)
 
 plot(DTM_post, 
@@ -221,7 +216,7 @@ DTMs.
 DoD <- DTM_post-DTM_pre
 
 plot(DoD,
-        main="Digital Elevation Model of Difference (DoD)",
+        main="Digital Elevation Model (DEM) Difference",
         axes=FALSE)
 
 ```
@@ -275,7 +270,7 @@ difCol5 = c("#d7191c","#fdae61","#ffffbf","#abd9e9","#2c7bb6")
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main="Elevation Change Post Flood\nFour Mile Canyon Creek, Boulder County",
+        main="Elevation Change Post-Flood Four Mile Canyon, Boulder County",
         axes=FALSE)
 
 # add the DoD to it with specified breaks & colors
@@ -307,7 +302,7 @@ by manually drawing a box.
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main="Four Mile Canyon Creek, Boulder County\nPre-Flood",
+        main="Pre-Flood Four Mile Canyon, Boulder County",
         axes=FALSE)
 
 plot(DoD,
@@ -318,20 +313,20 @@ plot(DoD,
         add =T)
 
 # crop by designating two opposite corners
-cropbox1 <- drawExtent()  
+cropbox1 <- draw()  
 
 ```
 ```{r crop-box-hidden, include=FALSE, purl=FALSE}
-cropbox1 <- extent(473814, 474982, 4434537, 4435390)
+cropbox1 <- c(473814, 474982, 4434537, 4435390)
 ```
 <figure>
-	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/disturb-events-co13/drawExtent.png">
-  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/disturb-events-co13/drawExtent.png"
+	<a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/disturb-events-co13/drawExtent.png">
+  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/disturb-events-co13/drawExtent.png"
   alt= "Plot of the Elevation change Post-flood in Four Mile Canyon Creek, Boulder County. Figure also includes crop window inlay around the area of interest.">
   </a>
 </figure>
 
-After executing the `drawExtent()` function, we now physically click on the plot
+After executing the `draw()` function, we now physically click on the plot
 at the two opposite corners of the box you want to crop to. You should see a 
 box drawn on the plot at this point.
 
@@ -354,40 +349,40 @@ the desired area.
 
 ```{r crop-raster-coords}
 # desired coordinates of the box
-cropbox2<-c(473792.6,474999,4434526,4435453)
+cropbox2 <- c(473792.6,474999,4434526,4435453)
 ```
 
-Once you have the crop box defined, either manually or using the coordinate, you 
-then crop the desired layer to the crop box. 
+Once you have the crop box defined, either by manually clicking or by defining 
+the coordinates, you can crop the desired layer to the crop box. 
 
 ```{r plot-crop-raster, fig.cap=c("Raster Plot of the cropped section of Four Mile Creek, Boulder County.","Raster Plot of the cropped section of Four Mile Creek, Boulder County, Post-Flood.","Plot of the Elevation change, Post-flood, in the cropped section of Four Mile Canyon Creek, Boulder County with elevation change represented in categories (breaks).")}
-# crop desired layers to this cropbox
+
+# crop desired layers to the cropbox2 extent
 DTM_pre_crop <- crop(DTM_pre, cropbox2)
 DTM_post_crop <- crop(DTM_post, cropbox2)
 DTMpre_hill_crop <- crop(DTM_pre_hillshade,cropbox2)
 DTMpost_hill_crop <- crop(DTM_post_hillshade,cropbox2)
 DoD_crop <- crop(DoD, cropbox2)
 
-# plot all again using the cropped layers
+# plot the pre- and post-flood elevation + DEM difference rasters again, using the cropped layers
 
-# PRE
+# PRE-FLOOD (w/ hillshade)
 plot(DTMpre_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main="Four Mile Canyon Creek, Boulder County\nPre-Flood",
+        main="Pre-Flood Four Mile Canyon, Boulder County ",
         axes=FALSE)
-# note \n in the title forces a line break in the title
+
 plot(DTM_pre_crop, 
         axes=FALSE,
         alpha=0.3,
         add=T)
 
-# POST
-# plot Post-flood w/ hillshade
+# POST-FLOOD (w/ hillshade)
 plot(DTMpost_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main="Four Mile Canyon Creek, Boulder County\nPost-Flood",
+        main="Post-Flood Four Mile Canyon, Boulder County",
         axes=FALSE)
 
 plot(DTM_post_crop, 
@@ -395,11 +390,11 @@ plot(DTM_post_crop,
         alpha=0.3,
         add=T)
 
-# CHANGE - DoD
+# ELEVATION CHANGE - DEM Difference
 plot(DTMpost_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main="Elevation Change Post Flood\nFour Mile Canyon Creek, Boulder County",
+        main="Elevation Change Post Flood Four Mile Canyon, Boulder County",
         axes=FALSE)
 
 plot(DoD_crop,
@@ -414,8 +409,7 @@ Now you have a graphic of your particular area of interest.
 
 ## Additional Resources
 
-* How could you create a DoD, if you only have LiDAR from a single time point 
-but historical maps?  Check out 
+* How could you create a DEM difference if you only had LiDAR data from a single date, but you had historical maps?  Check out:
 <a href="http://people.cas.sc.edu/hodgsonm/Published_Articles_PDF/James_Hodgson_Ghoshal_Latiolais_DEM%20DIfferencing_Geomorphology2012.pdf" target="_blank"> Allen James et al. 2012. Geomorphic change detection using historic maps and 
 DEM differencing: The temporal dimension of geospatial analysis. Geomorphology 137:181-198</a>. 
 
